--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Portfolio</title>
+    <title>K-Lee Marks - Portfolio</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
@@ -60,7 +60,7 @@
         </div>
 
         <div class="relative z-10 text-center fade-in">
-            <h1 class="text-5xl md:text-7xl font-extrabold mb-4 leading-tight">Hello, I'm <span class="text-yellow-300">Your Name</span>.</h1>
+            <h1 class="text-5xl md:text-7xl font-extrabold mb-4 leading-tight">Hello, I'm <span class="text-yellow-300">K-Lee</span>.</h1>
             <p class="text-xl md:text-2xl font-light mb-8 max-w-2xl mx-auto">A passionate [Your Profession/Role] building [What you build/do].</p>
             <div class="flex flex-col sm:flex-row justify-center space-y-4 sm:space-y-0 sm:space-x-4">
                 <a href="#portfolio" class="btn bg-white text-blue-600 px-8 py-3 rounded-full shadow-lg hover:bg-gray-100 font-semibold text-lg">View My Work</a>
