--- a/index.html
+++ b/index.html
@@ -108,12 +108,12 @@
             <div class="project-card bg-white rounded-xl shadow-md overflow-hidden border border-gray-200">
                 <img src="https://placehold.co/600x400/e0e7ff/334155?text=Project+1+Image" alt="Project 1" class="w-full h-56 object-cover">
                 <div class="p-6">
-                    <h3 class="text-2xl font-semibold mb-3 text-gray-800">Project Title One</h3>
-                    <p class="text-gray-600 mb-4">A brief, engaging description of Project One. Highlight its purpose, technologies used, and your role. This project focused on [key feature] and utilized [tech stack].</p>
+                    <h3 class="text-2xl font-semibold mb-3 text-gray-800">HarmonySync/h3>
+                    <p class="text-gray-600 mb-4">A biometric conversation tool to help couples navigate conflict. This project focused on monitoring heart rate and using AI to support couples with nervous system regulation and repair, utilizing node.js, OpenAI and AssemblyAI.</p>
                     <div class="flex flex-wrap gap-2 mb-4">
                         <span class="bg-purple-100 text-purple-800 text-xs font-medium px-3 py-1 rounded-full">React</span>
                         <span class="bg-purple-100 text-purple-800 text-xs font-medium px-3 py-1 rounded-full">Tailwind CSS</span>
-                        <span class="bg-purple-100 text-purple-800 text-xs font-medium px-3 py-1 rounded-full">Firebase</span>
+                        <span class="bg-purple-100 text-purple-800 text-xs font-medium px-3 py-1 rounded-full">OpenAI</span>
                     </div>
                     <div class="flex space-x-4">
                         <a href="#" target="_blank" class="btn bg-blue-600 text-white px-5 py-2 rounded-full text-sm font-semibold hover:bg-blue-700 shadow-md">Live Demo</a>
