--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     <div class="flex flex-wrap gap-2 mb-4">
                         <span class="bg-purple-100 text-purple-800 text-xs font-medium px-3 py-1 rounded-full">React</span>
                         <span class="bg-purple-100 text-purple-800 text-xs font-medium px-3 py-1 rounded-full">Tailwind CSS</span>
-                        <span class="bg-purple-100 text-purple-800 text-xs font-medium px-3 py-1 rounded-full">OpenAI</span>
+                        <span class="bg-purple-100 text-purple-800 text-xs font-medium px-3 py-1 rounded-full">OpenAI API Integration</span>
                     </div>
                     <div class="flex space-x-4">
                         <a href="#" target="_blank" class="btn bg-blue-600 text-white px-5 py-2 rounded-full text-sm font-semibold hover:bg-blue-700 shadow-md">Live Demo</a>
@@ -125,10 +125,10 @@
             <div class="project-card bg-white rounded-xl shadow-md overflow-hidden border border-gray-200">
                 <img src="https://placehold.co/600x400/ffe0e7/334155?text=Project+2+Image" alt="Project 2" class="w-full h-56 object-cover">
                 <div class="p-6">
-                    <h3 class="text-2xl font-semibold mb-3 text-gray-800">Project Title Two</h3>
-                    <p class="text-gray-600 mb-4">This project involved [specific challenge] and demonstrated my ability to [skill showcased]. It was built using [tech stack] and aimed to [project goal].</p>
+                    <h3 class="text-2xl font-semibold mb-3 text-gray-800">StarSeed Odyessy</h3>
+                    <p class="text-gray-600 mb-4">This project involved building a mini solar system simulation, and demonstrated my ability to build a full game demo. It was built using three.js and aimed to tell a short but powerful story.</p>
                     <div class="flex flex-wrap gap-2 mb-4">
-                        <span class="bg-purple-100 text-purple-800 text-xs font-medium px-3 py-1 rounded-full">Vanilla JS</span>
+                        <span class="bg-purple-100 text-purple-800 text-xs font-medium px-3 py-1 rounded-full">Three.js</span>
                         <span class="bg-purple-100 text-purple-800 text-xs font-medium px-3 py-1 rounded-full">HTML/CSS</span>
                         <span class="bg-purple-100 text-purple-800 text-xs font-medium px-3 py-1 rounded-full">API Integration</span>
                     </div>
@@ -142,7 +142,7 @@
             <div class="project-card bg-white rounded-xl shadow-md overflow-hidden border border-gray-200">
                 <img src="https://placehold.co/600x400/e0ffe7/334155?text=Project+3+Image" alt="Project 3" class="w-full h-56 object-cover">
                 <div class="p-6">
-                    <h3 class="text-2xl font-semibold mb-3 text-gray-800">Project Title Three</h3>
+                    <h3 class="text-2xl font-semibold mb-3 text-gray-800">Personal Journal RAG</h3>
                     <p class="text-gray-600 mb-4">My contribution to this project included [your specific contributions]. It's a [type of project] designed to [project goal] and uses [tech stack].</p>
                     <div class="flex flex-wrap gap-2 mb-4">
                         <span class="bg-purple-100 text-purple-800 text-xs font-medium px-3 py-1 rounded-full">Python</span>
