--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <div class="project-card bg-white rounded-xl shadow-md overflow-hidden border border-gray-200">
                 <img src="https://placehold.co/600x400/e0e7ff/334155?text=Project+1+Image" alt="Project 1" class="w-full h-56 object-cover">
                 <div class="p-6">
-                    <h3 class="text-2xl font-semibold mb-3 text-gray-800">HarmonySync/h3>
+                    <h3 class="text-2xl font-semibold mb-3 text-gray-800">HarmonySync</h3>
                     <p class="text-gray-600 mb-4">A biometric conversation tool to help couples navigate conflict. This project focused on monitoring heart rate and using AI to support couples with nervous system regulation and repair, utilizing node.js, OpenAI and AssemblyAI.</p>
                     <div class="flex flex-wrap gap-2 mb-4">
                         <span class="bg-purple-100 text-purple-800 text-xs font-medium px-3 py-1 rounded-full">React</span>
