--- a/index.html
+++ b/index.html
@@ -77,14 +77,13 @@
             </div>
             <div class="md:w-2/3 text-lg text-gray-700">
                 <p class="mb-4">
-                    Hi there! I'm <strong class="text-blue-600">Your Name</strong>, a [Your Profession/Role] with a passion for [Your interests/niche, e.g., creating intuitive user experiences, solving complex problems with code, designing beautiful interfaces]. I love transforming ideas into tangible products that make a difference.
-                </p>
-                <p class="mb-4">
-                    My journey in [Your Field] began [Year/How it started, e.g., X years ago when I built my first website, during my studies at University Y]. Since then, I've had the opportunity to work on diverse projects, ranging from [Type of project 1] to [Type of project 2], honing my skills in [Key skill 1], [Key skill 2], and [Key skill 3].
-                </p>
-                <p>
-                    I'm always eager to learn new technologies and collaborate on exciting ventures. When I'm not coding or designing, you can find me [Your hobby/interest, e.g., hiking in the mountains, experimenting with new recipes, reading sci-fi novels].
-                </p>
+                    Hi there! I'm <strong class="text-blue-600">Your Name</strong>, Hi there! I'm Christopher K-Lee Marks, a Founder, Educator, Creative Technologist, and Relationship Coach with a passion for designing tools and experiences that foster human connection, personal growth, and creative expression. I love transforming soulful ideas into tangible products that make a real difference—whether it's through music, apps, coaching, or education. </p>
+
+ <p class="mb-4">My journey in creative technology and transformation work began over a decade ago when I built a community recording studio in rural Mexico. Since then, I’ve worked on a wide range of projects—from AI-driven learning platforms to music licensing and podcasting services, honing my skills in product development, digital storytelling, and emotional intelligence coaching.
+ </p>
+ <p class="mb-4">I'm always exploring new ways to blend science, spirituality, and design—and I love collaborating on projects that have heart. When I'm not building or teaching, you can find me making music, mentoring creatives, or experimenting with tools that bring people closer to themselves and each other.
+ </p>
+            
                 <div class="mt-8">
                     <h3 class="text-2xl font-semibold mb-4 text-gray-800">Skills</h3>
                     <div class="flex flex-wrap gap-3">
