--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             </div>
 
             <div class="project-card bg-white rounded-xl shadow-md overflow-hidden border border-gray-200">
-                <img src="https://placehold.co/600x400/ffe0e7/334155?text=Project+2+Image" alt="Project 2" class="w-full h-56 object-cover">
+                <img src="http://www.podcast-farm.com/projects/StarSeed/starseed2.jpg" alt="Project 2" class="w-full h-56 object-cover">
                 <div class="p-6">
                     <h3 class="text-2xl font-semibold mb-3 text-gray-800">StarSeed Odyessy</h3>
                     <p class="text-gray-600 mb-4">This project involved building a mini solar system simulation, and demonstrated my ability to build a full game demo. It was built using three.js and aimed to tell a short but powerful story.</p>
