--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <div class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10">
 
             <div class="project-card bg-white rounded-xl shadow-md overflow-hidden border border-gray-200">
-                <img src="https://placehold.co/600x400/e0e7ff/334155?text=Project+1+Image" alt="Project 1" class="w-full h-56 object-cover">
+                <img src="http://www.podcast-farm.com/projects/StarSeed/HarmonySync.png" alt="Project 1" class="w-full h-56 object-cover">
                 <div class="p-6">
                     <h3 class="text-2xl font-semibold mb-3 text-gray-800">HarmonySync</h3>
                     <p class="text-gray-600 mb-4">A biometric conversation tool to help couples navigate conflict. This project focused on monitoring heart rate and using AI to support couples with nervous system regulation and repair, utilizing node.js, OpenAI and AssemblyAI.</p>
