--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <h2 class="text-4xl font-bold text-center mb-12 text-gray-800">About Me</h2>
         <div class="flex flex-col md:flex-row items-center md:space-x-12">
             <div class="md:w-1/3 mb-8 md:mb-0 text-center">
-                <img src="https://placehold.co/300x300/a0c4ff/ffffff?text=Your+Photo" alt="Your Photo" class="rounded-full w-48 h-48 mx-auto object-cover shadow-xl border-4 border-blue-200">
+                <img src="https://podcast-farm.com/projects/gitsite/keli.png" alt="Your Photo" class="rounded-full w-48 h-48 mx-auto object-cover shadow-xl border-4 border-blue-200">
             </div>
             <div class="md:w-2/3 text-lg text-gray-700">
                 <p class="mb-4">
