--- a/index.html
+++ b/index.html
@@ -185,6 +185,40 @@
                 </div>
             </div>
 
+            <div class="project-card bg-white rounded-xl shadow-md overflow-hidden border border-gray-200">
+                <img src="https://placehold.co/600x400/e0ffe7/334155?text=Project+3+Image" alt="Personal Journal RAG Project" class="w-full h-56 object-cover">
+                <div class="p-6">
+                    <h3 class="text-2xl font-semibold mb-3 text-gray-800">Personal Journal RAG</h3>
+                    <p class="text-gray-600 mb-4">My contribution to this project included building a Retrieval-Augmented Generation (RAG) system for personal journaling. It's a tool designed to help users gain insights from their journal entries using AI and natural language processing.</p>
+                    <div class="flex flex-wrap gap-2 mb-4">
+                        <span class="bg-purple-100 text-purple-800 text-xs font-medium px-3 py-1 rounded-full">Python</span>
+                        <span class="bg-purple-100 text-purple-800 text-xs font-medium px-3 py-1 rounded-full">Machine Learning</span>
+                        <span class="bg-purple-100 text-purple-800 text-xs font-medium px-3 py-1 rounded-full">Data Analysis</span>
+                    </div>
+                    <div class="flex space-x-4">
+                        <a href="#" target="_blank" class="btn bg-blue-600 text-white px-5 py-2 rounded-full text-sm font-semibold hover:bg-blue-700 shadow-md">Live Demo</a>
+                        <a href="#" target="_blank" class="btn border border-blue-600 text-blue-600 px-5 py-2 rounded-full text-sm font-semibold hover:bg-blue-50 hover:text-blue-700">GitHub Repo</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="project-card bg-white rounded-xl shadow-md overflow-hidden border border-gray-200">
+                <img src="https://placehold.co/600x400/e0ffe7/334155?text=Project+3+Image" alt="Personal Journal RAG Project" class="w-full h-56 object-cover">
+                <div class="p-6">
+                    <h3 class="text-2xl font-semibold mb-3 text-gray-800">Personal Journal RAG</h3>
+                    <p class="text-gray-600 mb-4">My contribution to this project included building a Retrieval-Augmented Generation (RAG) system for personal journaling. It's a tool designed to help users gain insights from their journal entries using AI and natural language processing.</p>
+                    <div class="flex flex-wrap gap-2 mb-4">
+                        <span class="bg-purple-100 text-purple-800 text-xs font-medium px-3 py-1 rounded-full">Python</span>
+                        <span class="bg-purple-100 text-purple-800 text-xs font-medium px-3 py-1 rounded-full">Machine Learning</span>
+                        <span class="bg-purple-100 text-purple-800 text-xs font-medium px-3 py-1 rounded-full">Data Analysis</span>
+                    </div>
+                    <div class="flex space-x-4">
+                        <a href="#" target="_blank" class="btn bg-blue-600 text-white px-5 py-2 rounded-full text-sm font-semibold hover:bg-blue-700 shadow-md">Live Demo</a>
+                        <a href="#" target="_blank" class="btn border border-blue-600 text-blue-600 px-5 py-2 rounded-full text-sm font-semibold hover:bg-blue-50 hover:text-blue-700">GitHub Repo</a>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </section>
 
