--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                         <span class="bg-purple-100 text-purple-800 text-xs font-medium px-3 py-1 rounded-full">Sound Design</span>
                     </div>
                     <div class="flex space-x-4">
-                        <a href="#" target="_blank" class="btn bg-blue-600 text-white px-5 py-2 rounded-full text-sm font-semibold hover:bg-blue-700 shadow-md">Live Demo</a>
+                        <a href="https://podcast-farm.com/projects/StarSeed/index.html" target="_blank" class="btn bg-blue-600 text-white px-5 py-2 rounded-full text-sm font-semibold hover:bg-blue-700 shadow-md">Live Demo</a>
                         <a href="#" target="_blank" class="btn border border-blue-600 text-blue-600 px-5 py-2 rounded-full text-sm font-semibold hover:bg-blue-50 hover:text-blue-700">GitHub Repo</a>
                     </div>
                 </div>
@@ -308,7 +308,7 @@
                         <span class="bg-purple-100 text-purple-800 text-xs font-medium px-3 py-1 rounded-full">Sound Design</span>
                     </div>
                     <div class="flex space-x-4">
-                        <a href="#" target="_blank" class="btn bg-blue-600 text-white px-5 py-2 rounded-full text-sm font-semibold hover:bg-blue-700 shadow-md">Live Demo</a>
+                        <a href="https://www.loom.com/share/aba73d2f6cc24e25ba08b82884d145e4?sid=c76c9d66-c026-478d-a364-d7e03f777135" target="_blank" class="btn bg-blue-600 text-white px-5 py-2 rounded-full text-sm font-semibold hover:bg-blue-700 shadow-md">Live Demo</a>
                         <a href="#" target="_blank" class="btn border border-blue-600 text-blue-600 px-5 py-2 rounded-full text-sm font-semibold hover:bg-blue-50 hover:text-blue-700">GitHub Repo</a>
                     </div>
                 </div>
