--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             </div>
 
             <div class="project-card bg-white rounded-xl shadow-md overflow-hidden border border-gray-200">
-                <img src="https:/wwww.podcast-farm.com/projects/gitsite/driftnotethumb.png" alt="DriftNote P2P Project" class="w-full h-56 object-cover">
+                <img src="https://podcast-farm.com/projects/gitsite/driftnotethumb.png" alt="DriftNote P2P Project" class="w-full h-56 object-cover">
                 <div class="p-6">
                     <h3 class="text-2xl font-semibold mb-3 text-gray-800">DriftNote P2P</h3>
                     <p class="text-gray-600 mb-4">A React-based peer-to-peer application that reimagines the concept of messages in bottles for the digital age. Users can record audio messages that drift through a P2P network, creating an anonymous, contemplative space for sharing thoughts and stories across the globe.</p>
@@ -187,7 +187,7 @@
             </div>
 
             <div class="project-card bg-white rounded-xl shadow-md overflow-hidden border border-gray-200">
-                <img src="https:/wwww.podcast-farm.com/projects/gitsite/ideaforgelogo.png" alt="IdeaForge AI Assistant" class="w-full h-56 object-cover">
+                <img src="https://podcast-farm.com/projects/gitsite/ideaforgelogo.png" alt="IdeaForge AI Assistant" class="w-full h-56 object-cover">
                 <div class="p-6">
                     <h3 class="text-2xl font-semibold mb-3 text-gray-800">IdeaForge</h3>
                     <p class="text-gray-600 mb-4">An AI-powered idea development platform inspired by Jarvis, designed to transform concepts into shipped products. Features include AI-enhanced idea validation, automated work breakdown structures, Kanban boards, and implementation support, all delivered through an intuitive conversational interface.</p>
