--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
             </div>
 
             <div class="project-card bg-white rounded-xl shadow-md overflow-hidden border border-gray-200">
-                <img src="https:/wwww.podcast-farm.com/projects/gitsite/root-code.png" alt="Root Code Game" class="w-full h-56 object-cover">
+                <img src="https://podcast-farm.com/projects/gitsite/root-code.png" alt="Root Code Game" class="w-full h-56 object-cover">
                 <div class="p-6">
                     <h3 class="text-2xl font-semibold mb-3 text-gray-800">Root Code</h3>
                     <p class="text-gray-600 mb-4">A 3D isometric soulslike game that combines Vampire Survivors' progression with a narrative exploring humanity's future and AI. Built in Godot 4, featuring branching storylines, hidden lore, and soulslike combat mechanics in a world where players use AI and robotics to fight against technological destruction.</p>
