--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
             </div>
 
             <div class="project-card bg-white rounded-xl shadow-md overflow-hidden border border-gray-200">
-                <img src="https://placehold.co/600x400/e0ffe7/334155?text=AIHelper" alt="AIHelper Mac App" class="w-full h-56 object-cover">
+                <img src="podcast-farm.com/projects/gitsite/aihelper.png" alt="AIHelper Mac App" class="w-full h-56 object-cover">
                 <div class="p-6">
                     <h3 class="text-2xl font-semibold mb-3 text-gray-800">AIHelper Mac App</h3>
                     <p class="text-gray-600 mb-4">A native macOS menu bar application that provides seamless AI assistance across your system. Features include system-wide text selection processing, multi-conversation management, and persistent chat history, all accessible through a clean SwiftUI interface.</p>
