--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <div class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10">
 
             <div class="project-card bg-white rounded-xl shadow-md overflow-hidden border border-gray-200">
-                <img src="http://www.podcast-farm.com/projects/StarSeed/HarmonySync.png" alt="HarmonySync Project" class="w-full h-56 object-cover">
+                <img src="http://www.podcast-farm.com/projects/StarSeed/HarmonySyncVertical.png" alt="HarmonySync Project" class="w-full h-56 object-cover">
                 <div class="p-6">
                     <h3 class="text-2xl font-semibold mb-3 text-gray-800">HarmonySync</h3>
                     <p class="text-gray-600 mb-4">A biometric conversation tool to help couples navigate conflict. This project focused on monitoring heart rate and using AI to support couples with nervous system regulation and repair, utilizing node.js, OpenAI and AssemblyAI.</p>
@@ -223,7 +223,7 @@
             </div>
 
             <div class="project-card bg-white rounded-xl shadow-md overflow-hidden border border-gray-200">
-                <img src="podcast-farm.com/projects/gitsite/aihelper.png" alt="AIHelper Mac App" class="w-full h-56 object-cover">
+                <img src="https://podcast-farm.com/projects/gitsite/aihelper.png" alt="AIHelper Mac App" class="w-full h-56 object-cover">
                 <div class="p-6">
                     <h3 class="text-2xl font-semibold mb-3 text-gray-800">AIHelper Mac App</h3>
                     <p class="text-gray-600 mb-4">A native macOS menu bar application that provides seamless AI assistance across your system. Features include system-wide text selection processing, multi-conversation management, and persistent chat history, all accessible through a clean SwiftUI interface.</p>
