--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
             </div>
 
             <div class="project-card bg-white rounded-xl shadow-md overflow-hidden border border-gray-200">
-                <img src="https://placehold.co/600x400/e0ffe7/334155?text=Jobi" alt="Jobi AI Resume Assistant" class="w-full h-56 object-cover">
+                <img src="https://podcast-farm.com/projects/gitsite/jobithumb.png" alt="Jobi AI Resume Assistant" class="w-full h-56 object-cover">
                 <div class="p-6">
                     <h3 class="text-2xl font-semibold mb-3 text-gray-800">Jobi</h3>
                     <p class="text-gray-600 mb-4">An AI-powered job search and resume optimization platform that streamlines the application process. Features include automated job matching via SerpApi, AI-generated ATS-optimized resumes, personalized cover letters, and an application tracker, all designed to help job seekers land interviews faster.</p>
