--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
             </div>
 
             <div class="project-card bg-white rounded-xl shadow-md overflow-hidden border border-gray-200">
-                <img src="https://placehold.co/600x400/e0ffe7/334155?text=Humanity's+Codex" alt="Humanity's Codex" class="w-full h-56 object-cover">
+                <img src="https://podcast-farm.com/projects/gitsite/treasuretrove2.png" alt="Humanity's Codex" class="w-full h-56 object-cover">
                 <div class="p-6">
                     <h3 class="text-2xl font-semibold mb-3 text-gray-800">Humanity's Codex</h3>
                     <p class="text-gray-600 mb-4">An interactive digital time capsule that maps and preserves humanity's collective wisdom across disciplines. Features a Wikipedia API-powered knowledge graph connecting physics, art, psychology, and spirituality, with interactive visualizations, cross-cultural perspectives, and curated learning paths. Designed as a living document that evolves with new insights while preserving core human knowledge.</p>
