--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
             </div>
 
             <div class="project-card bg-white rounded-xl shadow-md overflow-hidden border border-gray-200">
-                <img src="https://placehold.co/600x400/e0ffe7/334155?text=RAGA" alt="RAGA - Sounds of India" class="w-full h-56 object-cover">
+                <img src="https://podcast-farm.com/projects/gitsite/ragathumb.jpg" alt="RAGA - Sounds of India" class="w-full h-56 object-cover">
                 <div class="p-6">
                     <h3 class="text-2xl font-semibold mb-3 text-gray-800">RAGA - Sounds of India</h3>
                     <p class="text-gray-600 mb-4">An official Ableton Live pack featuring authentic recordings from master musicians across India. Includes 1300+ Raga loops, 70 percussion one-shots, and custom instrument racks for sitar and tanpura. Recorded by Keli Marks (Manohara) during travels across India, featuring tabla, dholak, sarangi, sitar, sarod, bansuri flute, and female vocals.</p>
