--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                         <span class="bg-purple-100 text-purple-800 text-xs font-medium px-3 py-1 rounded-full">Node.js</span>
                     </div>
                     <div class="flex space-x-4">
-                        <a href="#" target="_blank" class="btn bg-blue-600 text-white px-5 py-2 rounded-full text-sm font-semibold hover:bg-blue-700 shadow-md">Live Demo</a>
+                        <a href="https://www.loom.com/share/50324e09ee014be6baad8dec0bd2ee12?sid=16a09434-711f-40e4-bfbf-d1174e1f8b6f" target="_blank" class="btn bg-blue-600 text-white px-5 py-2 rounded-full text-sm font-semibold hover:bg-blue-700 shadow-md">View Demo</a>
                         <a href="#" target="_blank" class="btn border border-blue-600 text-blue-600 px-5 py-2 rounded-full text-sm font-semibold hover:bg-blue-50 hover:text-blue-700">GitHub Repo</a>
                     </div>
                 </div>
